--- a/contato.html
+++ b/contato.html
@@ -23,9 +23,9 @@
                     <li><a href="projetos.html">Projetos</a></li>
                     <li><a href="contato.html">Contato</a></li>
                     <li><a href="#" onclick="MostrarCampoPesquisar()"><i class="fa fa-search"></i></a>
-                    <span id="campo">
-                        <input type="search" placeholder="Pesquisar">
-                    </span>
+                        <span id="campo">
+                            <input type="search" placeholder="Pesquisar">
+                        </span>
                     </li>
                 </ul>
             </nav>
@@ -33,17 +33,24 @@
         <main class="conteudo-principal">
             <div class="coluna-texto">
                 <h2 class="texto-titulo">Me mande uma mensagem</h2>
-                <p class="texto-corpo texto-contato"><a href="mailto:henrique2002h@outlook.com">henrique2002h@outlook.com</a>
+                <p class="texto-corpo texto-contato"><a
+                        href="mailto:henrique2002h@outlook.com">henrique2002h@outlook.com</a>
                     <br>
-                   ou me mande uma mensagem no  <a href="https://api.whatsapp.com/send?19989370371&text=Gostaria de mais informações" target="blank">whatsapp!</a>
+                    ou me mande uma mensagem no <a
+                        href="https://api.whatsapp.com/send?19989370371&text=Gostaria de mais informações"
+                        target="blank">whatsapp!</a>
                 </p>
                 <a href="#" class="botao-principal">Meus Projetos</a>
                 <ul class="redes-sociais">
-                    <li><a href="#"><i class="fa fa-github"></i></a></li>
-                    <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/rick019" target="blank"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://api.whatsapp.com/send?phone=5519989370371&text=olá" target="blank"><i
+                                class="fa fa-whatsapp"></i></a></li>
+                    <li><a href="https://www.facebook.com/RKDesigner019" target="blank"><i
+                                class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com/rk_designer_019/" target="blank"><i
+                                class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/henrique-brito-434317215/" target="blank"><i
+                                class="fa fa-linkedin"></i></a></li>
                 </ul>
             </div>
             <div class="coluna-foto">
